--- a/frontend/src/components/card/card.scss
+++ b/frontend/src/components/card/card.scss
@@ -5,5 +5,7 @@
     background-color: red;
     margin: 1em;
     box-shadow: 4px 4px 10px rgba(0,0,0,.3);
-    border: 10px solid white; 
+    border: 10px solid white;
+    overflow: hidden;
+    display: flex;
 }
