--- a/frontend/src/components/card/card.scss
+++ b/frontend/src/components/card/card.scss
@@ -1,11 +1,52 @@
 .Card {
-    height: 200px;
-    width: 160px;
-    border-radius: 10px;
-    background-color: red;
-    margin: 1em;
-    box-shadow: 4px 4px 10px rgba(0,0,0,.3);
-    border: 10px solid white;
-    overflow: hidden;
-    display: flex;
+  background-color: transparent;
+  height: 200px;
+  width: 160px;
+  perspective: 1000px;
+  margin: 1em;
+  .content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    &.hidden {
+      transform: rotateY(180deg);
+    }
+    .background,
+    .image {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      border-radius: 10px;
+      overflow: hidden;
+      border: 10px solid white;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      transition: box-shadow 0.23s;
+      &:hover {
+        box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.3);
+      }
+    }
+    .background {
+      background-color: #e5e5f7;
+      background-image: linear-gradient(135deg, #444cf7 25%, transparent 25%),
+        linear-gradient(225deg, #444cf7 25%, transparent 25%),
+        linear-gradient(45deg, #444cf7 25%, transparent 25%),
+        linear-gradient(315deg, #444cf7 25%, #e5e5f7 25%);
+      background-position: 10px 0, 10px 0, 0 0, 0 0;
+      background-size: 20px 20px;
+      background-repeat: repeat;
+      transform: rotateY(180deg);
+    }
+    .image {
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
 }
