--- a/frontend/src/components/card/card.scss
+++ b/frontend/src/components/card/card.scss
@@ -21,9 +21,8 @@
       height: 100%;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
-      border-radius: 10px;
       overflow: hidden;
-      border: 10px solid white;
+      border: 10px solid black;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       transition: box-shadow 0.23s;
       &:hover {
@@ -31,15 +30,16 @@
       }
     }
     .background {
-      background-color: #e5e5f7;
-      background-image: linear-gradient(135deg, #444cf7 25%, transparent 25%),
-        linear-gradient(225deg, #444cf7 25%, transparent 25%),
-        linear-gradient(45deg, #444cf7 25%, transparent 25%),
-        linear-gradient(315deg, #444cf7 25%, #e5e5f7 25%);
-      background-position: 10px 0, 10px 0, 0 0, 0 0;
-      background-size: 20px 20px;
-      background-repeat: repeat;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       transform: rotateY(180deg);
+      color: white;
+      span{
+        font-size: xx-large;
+        font-weight: 900;
+      }
     }
     .image {
       img {
