--- a/frontend/src/views/gameSelection/gameSelection.scss
+++ b/frontend/src/views/gameSelection/gameSelection.scss
@@ -1,4 +1,12 @@
-.Game {
+.GameSelection {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  h1{
+    text-align: center;
+  }
+  .games{
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
