added pagination for all memotest

--- a/frontend/src/components/gameButton/gameButton.scss
+++ b/frontend/src/components/gameButton/gameButton.scss
@@ -15,7 +15,8 @@
         font-weight: 700;
         width: 100%;
         text-align: center;
-        background-color: white;
+        color:white;
+        background-color: black;
         padding: 8px;
         position: absolute;
     }
