--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -23,11 +23,16 @@ button {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
   transition: box-shadow 0.23s;
   &:hover {
     box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.3);
     color: #fff;
     background-color: #0b5ed7;
     border-color: #0a58ca;
+  }
+  &[disabled]{
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    background-color: rgb(207, 207, 207);
   }
 }
