--- a/frontend/src/views/gameSelection/gameSelection.scss
+++ b/frontend/src/views/gameSelection/gameSelection.scss
@@ -1,12 +1,22 @@
 .GameSelection {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   h1{
     text-align: center;
   }
   .games{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  }
+  .paginationBar{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 20px;
+    justify-content: center;
   }
 }
