--- a/frontend/src/components/gameButton/gameButton.scss
+++ b/frontend/src/components/gameButton/gameButton.scss
@@ -3,13 +3,17 @@
     width: 200px;
     border-radius: 10px;
     margin: 1em;
-    box-shadow: 4px 4px 10px rgba(0,0,0,.3);
     overflow: hidden;
     display: flex;
     justify-items: center;
     align-items: center;
-    background-color: bisque;
+    background-color: black;
     position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.23s;
+    &:hover {
+      box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.3);
+    }
     p{
         font-size: larger;
         font-weight: 700;
@@ -22,8 +26,9 @@
     }
     .background{
         display: grid;
-        grid-auto-rows: minmax(50px, auto);
-        grid-auto-columns: minmax(50px, auto);
+        grid-auto-rows: minmax(50px, 2fr);
+        grid-template-columns: 100px 100px;
+        grid-template-rows: 100px 100px;
         img{
             width: 100%;
             height: 100%;
