--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -11,25 +11,22 @@ button {
   outline: 0;
   color: #fff;
   background-color: #0d6efd;
-  border-color: #0d6efd;
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
   text-align: center;
-  border: 1px solid transparent;
+  border: none;
   padding: 6px 12px;
   font-size: 16px;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   margin: 10px;
   transition: box-shadow 0.23s;
   &:hover {
-    box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
     color: #fff;
-    background-color: #0b5ed7;
-    border-color: #0a58ca;
+    background-color: #3c87f8;
   }
   &[disabled]{
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
