--- a/frontend/src/views/game/game.scss
+++ b/frontend/src/views/game/game.scss
@@ -1,7 +1,24 @@
 .Game {
   display: flex;
-  flex-wrap: wrap;
-  .Modal .children{
-    p{}
+  flex-direction: column;
+  nav{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    button{
+      width: 35px;
+      height: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    h1{
+      width: 100%;
+      align-self: flex-end;
+    }
+  }
+  .cardsContainer{
+    display: flex;
+    flex-wrap: wrap;
   }
 }
